# lu-camp

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  Makefile  PHASE0_STATUS.md  README.md  check.ps1  check.sh  docker-compose.yml
backend/: .gitignore  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 1ee6d8890a79_add_sales_idempotency_key.py  376116e81be6_add_sales_and_consignment.py  3f2a9c1d5e84_add_sale_awarded_points.py  62e9ec3746b1_add_acquisition.py  62eb8579d1c2_add_audit_log.py  6941c06a8cab_add_inventory.py  69f27228600f_add_settings.py  7c4e9a2b1f30_add_store_phone.py  7d9e2c4a1b8f_add_purchasing.py  8452f7626afc_backup_manifest_restore_single_flight_.py  8b4c7e2f9a31_add_cash_movement_note.py  9a1b2c3d4e5f_supplier_is_active.py  a1b2c3d4e5f6_add_store_credit_min_spend.py  a2b3c4d5e6f7_po_supplier_name_snapshot.py  a6b7c8d9e0f1_k5_store_credit_signing.py  a6c4e2f8b1d3_catalog_product_create_idempotency.py  a7c4e9f1b2d8_add_premium_settings_and_history.py  a7f3c1d9e2b4_add_stocktake.py  a7f3c1e9d2b4_add_linepay_transactions.py  a9b0c1d2e3f4_add_signing_tables.py  b1c2d3e4f5a6_signature_sign_idempotency_key.py  b2c3d4e5f6a7_catalog_products_unique_sku.py  b3d9f2a1c7e5_add_store_credit_suggestion_log.py  b7c8d9e0f1a2_goods_receipt_input_invoice.py  b8a1c4d7e2f9_add_return_tenders_and_credit_refunds.py  b8e4f9a2c6d1_add_returns.py  bb5401f0ab93_initial_store_and_user.py  c1a2b3d4e5f6_product_model_brand_scoped_unique.py  c1d2e3f4a5b6_po_partial_receiving.py  c2d3e4f5a6b7_acquisition_signature_task.py  c3d4e5f6a7b8_add_contacts_store_phone_unique.py  c3d8f1a4b6e2_add_cashdrawer.py  c5a1d2e3f4b6_add_campaigns.py  c5d1e8a2b7f4_add_store_credit_ledger.py  c7d8e9f0a1b2_add_mobile_payment_tenders_and_fees.py  c8d9e0f1a2b3_invoices_amego_print_fields.py  c9d2e4f6a8b0_customer_display_devices_pairing.py  d0e1f2a3b4c5_customer_display_cart_sessions.py  d1f2a3b4c5d6_kiosk_displayed_cart_heartbeat.py  d2a3b4c5d6e7_signature_task_lifecycle.py  (+19 more)
backend/app/: main.py
backend/app/core/: audit.py  canonical.py  config.py  crypto.py  db.py  deps.py  money.py  national_id.py  security.py  time.py
backend/app/scripts/: data_backup.py  export_openapi.py  restore_drill.py  seed_dev_consignment.py  seed_dev_demo.py  seed_dev_purchasing.py  seed_dev_store.py  seed_dev_user.py
backend/app/shared/: enums.py  exceptions.py  http.py
backend/qa_e2e/: api_scan.py  api_scan_report.json  concurrency_probes.py  longrun_invariants.py  seed_large.py  sim_180d.py  sim_baseline.json  sim_helpers.py  sim_invariants.py  sim_manifest.json  test_sim_helpers.py
backend/tests/: conftest.py  test_acquisition.py  test_audit.py  test_canonical.py  test_cashdrawer.py  test_config.py  test_crypto.py  test_customer_display_changes.py  test_db.py  test_einvoice_amego.py  test_einvoice_dropper.py  test_einvoice_serializer.py  test_health.py  test_inventory.py  test_linepay_client.py  test_login_throttle.py  test_money.py  test_national_id.py  test_purchasing_migration.py  test_reports_aging.py  test_reports_schemas.py  test_rollback_isolation.py  test_sales.py  test_sales_invoice_enums.py  test_security.py  test_security_password.py  test_settings.py  test_signature_lifecycle_migration.py  test_signing_lock_order.py  test_sim_helpers.py  test_store_user_models.py  test_storecredit_engine.py  test_storecredit_metrics.py  test_storecredit_suggestion_windows.py  test_time.py
backend/tests/integration/: customer_display_helpers.py  test_acquisition_api.py  test_acquisition_atomic.py  test_acquisition_category.py  test_acquisition_payout.py  test_acquisition_signing.py  test_acquisition_signing_concurrency.py  test_acquisition_void.py  test_acquisition_void_concurrency.py  test_auth_api.py  test_backup_api.py  test_backup_service.py  test_brands_models_api.py  test_campaigns_api.py  test_cashdrawer_api.py  test_cashdrawer_close_movement_race.py  test_cashdrawer_concurrency.py  test_categories_api.py  test_consignment_api.py  test_consignment_payout.py  test_consignment_payout_concurrency.py  test_contacts_api.py  test_contacts_update_concurrency.py  test_cors.py  test_customer_display_cart_api.py  test_customer_display_pairing_api.py  test_data_backup.py  test_deps_revalidation.py  (+51 more)
hardware-agent/: .env.example  .gitignore  pyproject.toml
hardware-agent/agent/: config.py  deps.py  devices.py  errors.py  escpos_printer.py  fakes.py  interfaces.py  main.py  store_client.py
hardware-agent/tests/: test_brother_label.py  test_config.py  test_devices_router.py  test_einvoice_format.py  test_escpos_network.py  test_escpos_raster.py  test_print.py  test_print_signature.py  test_printer.py  test_scaffold.py  test_signature_png.py  test_status_real.py
(+345 files in other folders)
